--- a/css/body_variedades.css
+++ b/css/body_variedades.css
@@ -4,16 +4,9 @@ body{
     box-sizing: border-box;
 }
 
-.carousel{
-    width: 100%;
-    height: 100px;
-    background-color: aqua;
-    margin-bottom: 30px;
-}
-
 #imgsize{
-    width: 246px;
-    height: 246px;
+    width: 100%;
+    height: 72%;
 }
 
 .produtcts{
@@ -21,14 +14,21 @@ body{
     display: flex;
 }
 
+/* ============================ INÍCIO PRODUCTS 1 ============================ */
 .products1{
     display: flex;
-    justify-content: center;
-}
-
-.products2{
-    display: flex;
-    justify-content: center;
+    background-color: #f39595;
+    margin-top: 2.6%;
+    padding-top: 1%;
+    padding-bottom: 2%;
+    width: 100%;
+    padding-right: 5%;
+    padding-left: 5%;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .products1 div{
@@ -40,35 +40,104 @@ body{
     justify-content: center;
 }
 
+.products1 button:hover{
+    background-color: rgb(247, 180, 185);
+    border:solid 2px rgb(238, 9, 9);
+}
+
+.products1 button{
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 5%;
+    background-color: #ef8d8d;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    font-weight: 800;
+    color: white;
+    cursor: pointer;
+}
+/* ============================ FIM PRODUCTS 1 ============================ */
+
+/* ============================ INÍCIO PRODUCTS 2 ============================ */
+.products2{
+    display: flex;
+    background-color: #eca7a7;
+    padding: 2% 5%;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 .products2 div{
     display: inline-block;
     margin: 15px;
     border: 2px solid rgb(213, 33, 33);
     width: 250px;
     height: 350px;
-    
+    justify-content: center;
 }
 
+.products2 button:hover{
+    background-color: rgb(247, 180, 185);
+    border:solid 2px rgb(238, 9, 9);
+}
+
+.products2 button{
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 5%;
+    background-color: #ef8d8d;
+    border-radius: 10px;
+    border: none;
+    text-align: center;
+    font-weight: 800;
+    color: white;
+    cursor: pointer;
+}
+/* ============================ FIM PRODUCTS 2 ============================ */
 ul{
     list-style: none;
     position: relative;
     align-items:center;
     justify-content: center;
     background-color: rgba(172, 164, 164, 0.329);
-    padding: 7px;
-    bottom: 3px;
+    padding: 2.6%;
+    
 }
 
-li{
-    padding: 5px;
-    position: relative;
-}
+@media  (max-width:846){
 
-@media screen and(max-width:500px){
     .products1 div{
-    margin:0;
-    height:40px;
-    line-height:40;
-    display:block;
-    }  
+        flex-direction: column;
     }
+  
+    .products2 div{
+        flex-direction: column;
+    }
+  
+    .products1 div{
+        width: 80%;
+        margin-top:3%;
+        margin-bottom: 7%;
+    }
+  
+    .products2 div{
+        width: 80%;
+        margin-top:3%;
+        margin-bottom: 7%;
+    }
+}
